contrib/kubernetes/ct_helm/ingress.yaml
#  https://matthewpalmer.net/kubernetes-app-developer/articles/kubernetes-ingress-guide-nginx-example.html
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backstage
  labels:
    app: backstage
    component: ingress
spec:
  rules:
    - host: localhost
      http:
        paths:
          - backend:
              service:
                name: backstage
                port:
                  name: http
            path: /
            pathType: Prefix
